# hx711py

./: .gitignore  AGENTS.md  average_calc.py  example_hx711_listenable.py  hx711_listenable.py  pyproject.toml  setup.py  stable.py
